# SMM4H-HeaRD-2026-Task-2-Insomnia

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: baml.mdc
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py  watchers.py
baml_src/: clients.baml  generators.baml  insomnia.baml  insomnia.baml.example  insomnia_v1.baml.bak
data/training/: sample_note_ids.txt
insomnia/: __init__.py  evaluate.py  evaluate_cli.py  format_few_shots.py  gepa_optimize.py  inference.py  retrieve_few_shots.py  spans.py
scripts/: build_example_index.py  build_labeled_datasets.py  evaluate_predictions.py  run_gepa.py  run_inference.py  sanitize_subtask2_predictions.py
tests/: test_evaluate.py  test_spans.py
